# SpotifyDownloader

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cleanup  README.md  app.py  cleanup_service.py  config.properties  docker-compose.yml  main.py  nginx.conf  pom.xml  pyproject.toml  requirements.txt  start.sh  wsgi.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  i18n.ts  main.tsx
frontend/src/components/: AdminPage.module.css  AdminPage.tsx  Alert.module.css  Alert.tsx  DownloadCounter.module.css  DownloadCounter.tsx  FAQ.module.css  FAQ.tsx  Footer.module.css  Footer.tsx  LanguageSwitcher.module.css  LanguageSwitcher.tsx  Notification.module.css  Notification.tsx  RequestComponent.module.css  RequestComponent.tsx  RequestList.module.css  RequestList.tsx  Requests.module.css  Requests.tsx  SearchFields.module.css  SearchFields.tsx  ThemeSwitcher.module.css  ThemeSwitcher.tsx  Types.ts
frontend/src/locales/de/: translations.json
frontend/src/locales/en/: translations.json
src/: config.properties
src/main/java/com/tobias/spotifydownloader/: Config.java  Download.java  FileStorageException.java  FileStorageProperties.java  FileStorageService.java  MyFileNotFoundException.java  Song.java  (+1 more)
src/main/resources/: application.properties  cert.p12
static/css/: admin_style.css  style.css
static/js/: downloads.js  main.js  notifications.js  theme.js
templates/: admin.html  index.html
(+1 files in other folders)
